# pnml-parser

./: Cargo.toml  README.md
src/: core.rs  lib.rs  xml_util.rs
src/pt_net/: mod.rs  parser.rs
tests/: lib.rs
tests/pt_nets/: empty.pnml  place.pnml  small.pnml
